--- a/index.html
+++ b/index.html
@@ -1,12 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css">
+ 
+
+    <title>MI_TIENDA</title>
+  </head>
+  <body>
+
+    <header>
+        <div class="header">
+            <div class="header__option-f-m">
+                <div class="header__opition-f-m__fem">
+                    <p> MUJER </p>
+                </div>
+                <div class="header__opition-f-m__masc">
+                    <p> HOMBRE </p>
+                </div>
+            </div>
+            <div class="header__principal">
+                <div class="header__principal-title">
+                    <h1> MI_TIENDA </h1>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user__searcher">
+                    <img class="search-btn" src="images/lupa.png" />
+                    <input type="text" />
+                </div>
+                <div class="user__login">
+                    <a href=""> <img src="images/perfil.png" /></a>
+                </div>
+                <div class="user__shop">
+                    <a href=""> <img src="images/shop-bag.png" /></a>
+                </div>
+            </div>
+        </div>
+        <div class="sub-text">
+            <div class="below-title">
+                    <p> <a> Mujer </a> > <a> Ropa </a> > <a> Camisetas </a> > Licencias (51 articulos) </p>
+            </div>
+            <div class="other">
+                <div class="view">
+                    <p> VISTA 2 <span> 4 </span></p>
+                </div>
+                <div class="order">
+                    <p> ORDENAR POR </p>
+                </div>
+                <div class="filters">
+                    <p> FILTROS </p>
+                </div>
+            </div>
+        </div>
+    </header>
+        <div class="gallery">
+            <div class="gallery__box">
+                <div class="galerry__box-image">
+                    <img src="images/camiseta1.PNG" />
+                </div>
+                <div class="galerry__box-description">
+                    <p> Camiseta oversize manga corta hueso </p>
+                </div>
+                <div class="galerry__box-price">
+                    <p> 7,99 € </p>
+                </div>
+            </div>
+            <div class="gallery__box">
+                <div class="galerry__box-image">
+                    <img src="images/camiseta2.PNG" />
+                </div>
+                <div class="galerry__box-description">
+                    <p> Camiseta oversize manga corta gris </p>
+                </div>
+                <div class="galerry__box-price">
+                    <p>  7,99 € </p>
+                </div>
+            </div>
+            <div class="gallery__box">
+                <div class="galerry__box-image">
+                    <img src="images/camiseta3.PNG" />
+                </div>
+                <div class="galerry__box-description">
+                    <p> Camiseta oversize manga corta crema </p>
+                </div>
+                <div class="galerry__box-price">
+                    <p>  7,99 € </p>
+                </div>
+            </div>
+            <div class="gallery__box">
+                <div class="galerry__box-image">
+                    <img src="images/camiseta4.PNG" />
+                </div>
+                <div class="galerry__box-description">
+                    <p> Camiseta oversize manga corta negra </p>
+                </div>
+                <div class="galerry__box-price">
+                    <p>  7,99 € </p>
+                </div>
+            </div>
+            <div class="gallery__box">
+                <div class="galerry__box-image">
+                    <img src="images/camiseta5.PNG" />
+                </div>
+                <div class="galerry__box-description">
+                    <p> Camiseta oversize manga corta blanca </p>
+                </div>
+                <div class="galerry__box-price">
+                    <p>  7,99 € </p>
+                </div>
+            </div>
+            <div class="gallery__box">
+                <div class="galerry__box-image">
+                    <img src="images/camiseta6.PNG" />
+                </div>
+                <div class="galerry__box-description">
+                    <p> Camiseta oversize manga corta gris noche  </p>
+                </div>
+                <div class="galerry__box-price">
+                    <p>  7,99 € </p>
+                </div>
+            </div>
+            <div class="gallery__box">
+                <div class="galerry__box-image">
+                    <img src="images/camiseta7.PNG" />
+                </div>
+                <div class="galerry__box-description">
+                    <p> Camiseta oversize manga corta gris claro </p>
+                </div>
+                <div class="galerry__box-price">
+                    <p>  7,99 € </p>
+                </div>
+            </div>
+            <div class="gallery__box">
+                <div class="galerry__box-image">
+                    <img src="images/camiseta8.PNG" />
+                </div>
+                <div class="galerry__box-description">
+                    <p> Camiseta grafico contraste </p>
+                </div>
+                <div class="galerry__box-price">
+                    <p> 12,99 € </p>
+                </div>
+            </div>
+            <div class="gallery__box">
+                <div class="galerry__box-image">
+                    <img src="images/camiseta9.PNG" />
+                </div>
+                <div class="galerry__box-description">
+                    <p> Camiseta manga sisa ranglan</p>
+                </div>
+                <div class="galerry__box-price">
+                    <p> 12,99 € </p>
+                </div>
+            </div>
+            <div class="gallery__box">
+                <div class="galerry__box-image">
+                    <img src="images/camiseta10.PNG" />
+                </div>
+                <div class="galerry__box-description">
+                    <p> Camiseta grafico flor texto</p>
+                </div>
+                <div class="galerry__box-price">
+                    <p> 12,99 € </p>
+                </div>
+            </div>
+            
+        </div>
+      </header>
+
+    </div>
+  </body>
 </html>
