--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="header-styles.css">
  
 
     <title>MI_TIENDA</title>
   </head>
   <body>
-
     <header>
         <div class="header">
             <div class="header__option-f-m">
@@ -169,8 +168,141 @@
             </div>
             
         </div>
-      </header>
-
+        <div class="newsletter">
+            <div class="newsletter__message">
+                <h4> 10% DE DESCUENTO...</h4>
+                <h4> SUSCRIBETE A LA NEWSLETTER!</h4>
+            </div>
+            <div class="newsletter__email">
+                <span> Introduce tu email </span>
+                <input type="email" />
+            </div>
+        </div>
+        <div class="contact">
+            <p> Contacto </p>
+        </div>
+        <div class="contact-elements">
+            <div class="phone">
+                <div class="img-phone">
+                    <img src="images/smartphone.png" />
+                    <p> <a href=""> 900 812 900 </a></p>
+                </div>
+            </div>
+            <div class="online-sells">
+                <a href=""> Venta online </a>
+            </div>
+            <div class="shops">
+                <a href=""> Tiendas y empresa </a>
+            </div>
+        </div>
+        <div class="time">
+            <p> De lunes a viernes de 9:30 a 22:00 </p>
+        </div>
+    </header>
+    <div class="info">
+        <div class="shop-guide">
+            <ul>
+                <li><a href=""> Preguntas frecuentes </a></li>
+                <li><a href=""> Pago </a></li>
+                <li><a href=""> Envio </a></li>
+                <li><a href=""> Devoluciones </a></li>
+                <li><a href=""> Cambios </a></li>
+                <li><a href=""> Ticket Regalo </a></li>
+                <li><a href=""> Compra a traves de iPod en Tienda </a></li>
+                <li><a href=""></a> Disponibilidad de articulos</li>
+                <li><a href=""></a></li>
+               
+            </ul>
+        </div>
+        <div class="services">
+            <ul>
+                <li><a href="">Tarjeta Regalo</a></li>
+                <li><a href="">Arreglos</a></li>
+                <li><a href="">Cuidado de prendas</a></li>
+                <li><a href="">Cuidado de calzado</a></li>
+            </ul>
+        </div>
+        <div class="companies">
+            <ul>
+                <li><a href="">Quienes somos</a></li>
+                <li><a href="">Oficinas</a></li>
+                <li><a href="">Tiendas</a></li>
+                <li><a href="">Localizador de tiendas</a></li>
+                <li><a href=""></a>Trabaja con nosotros</li>
+                <li><a href="">Franquicias</a></li>
+            </ul>
+        </div>
+        <div class="policy">
+            <ul>
+                <li><a href="">Politica medioambiental</a></li>
+                <li><a href="">Trato a los animales</a></li>
+                <li><a href="">Politica de privacidad</a></li>
+                <li><a href="">Condiciones de compra</a></li>
+                <li><a href="">Politica de cookies</a></li>
+            </ul>
+        </div>
+        <div class="socials">
+            <div class="socials__fb">
+                <img src="images/facebook-app-symbol.png" >
+                <a href=""><p> Facebook </p></a>
+            </div>
+            <div class="socials__tw">
+                <img src="images/twitter.png" >
+                <a href=""><p> Twitter </p></a>
+            </div>
+            <div class="socials__pinterest">
+                <img src="images/pinterest.png" >
+                <a href=""><p> Pinterest </p></a>
+            </div>
+            <div class="socials__ig">
+                <img src="images/instagram.png" >
+                <a href=""><p> Instagram </p></a>
+            </div>
+            <div class="socials__yt">
+                <img src="images/youtube.png" >
+                <a href=""><p> YouTube </p></a>
+            </div>
+            <div class="socials__spoti">
+                <img src="images/spotify-logo.png" >
+                <a href=""><p> Spotify </p></a>
+            </div>
+        </div>
+        <div class="payment">
+            <div class="payment__visa">
+                <img src="images/visa.png" >
+                <a href=""><p> Visa </p></a>
+            </div>
+            <div class="payment__master">
+                <img src="images/master-card.png" >
+                <a href=""><p> MasterCard </p></a>
+            </div>
+            <div class="payment__amex">
+                <img src="images/amex.png" >
+                <a href=""><p> Amex </p></a>
+            </div>
+            <div class="payment__apple">
+                <img src="images/apple-pay.png" >
+                <a href=""><p> ApplePay </p></a>
+            </div>
+            <div class="payment__payp">
+                <img src="images/paypal.png" >
+                <a href=""><p> PayPal </p></a>
+            </div>
+        </div>
     </div>
+    <footer>
+      <div class="country">
+        España|es
+      </div>
+      <div class="ios">
+        <a href=""><img src="images/ios.png"><p>iOS App</p></a>
+      </div>
+      <div class="android">
+       <a href=""><img src="images/android.png"><p> Android App</p></a>
+      </div>
+      <div class="more">
+        <a href=""><p> Mas moda </p></a>
+      </div>
+    </footer>
   </body>
 </html>
