--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="header-styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
  
 
     <title>MI_TIENDA</title>
   </head>
   <body>
-    <header>
-        <div class="header">
+    <div class="header">
+        <header>
             <div class="header__option-f-m">
                 <div class="header__opition-f-m__fem">
                     <p> MUJER </p>
@@ -20,15 +23,13 @@
                     <p> HOMBRE </p>
                 </div>
             </div>
-            <div class="header__principal">
-                <div class="header__principal-title">
-                    <h1> MI_TIENDA </h1>
-                </div>
+            <div class="header__title">
+                <h1> MI_TIENDA </h1>
             </div>
             <div class="user">
                 <div class="user__searcher">
                     <img class="search-btn" src="images/lupa.png" />
-                    <input type="text" />
+                    <input type="text" placeholder="Buscar"/>
                 </div>
                 <div class="user__login">
                     <a href=""> <img src="images/perfil.png" /></a>
@@ -40,7 +41,7 @@
         </div>
         <div class="sub-text">
             <div class="below-title">
-                    <p> <a> Mujer </a> > <a> Ropa </a> > <a> Camisetas </a> > Licencias (51 articulos) </p>
+                    <p> <a> Mujer </a> > <a> Ropa </a> > <a> Camisetas </a> > <b>Licencias (51 articulos)</b> </p>
             </div>
             <div class="other">
                 <div class="view">
@@ -53,8 +54,9 @@
                     <p> FILTROS </p>
                 </div>
             </div>
-        </div>
-    </header>
+        </header>
+    </div>
+    
         <div class="gallery">
             <div class="gallery__box">
                 <div class="galerry__box-image">
