--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="header-styles.css">
+    <link rel="stylesheet" href="gallery-styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
@@ -59,116 +60,126 @@
     
         <div class="gallery">
             <div class="gallery__box">
-                <div class="galerry__box-image">
+                <div class="gallery__box-image">
                     <img src="images/camiseta1.PNG" />
                 </div>
-                <div class="galerry__box-description">
+                <div class="gallery__box-description">
                     <p> Camiseta oversize manga corta hueso </p>
                 </div>
-                <div class="galerry__box-price">
+                <div class="gallery__box-price">
                     <p> 7,99 € </p>
                 </div>
             </div>
             <div class="gallery__box">
-                <div class="galerry__box-image">
+                <div class="gallery__box-image">
                     <img src="images/camiseta2.PNG" />
                 </div>
-                <div class="galerry__box-description">
+                <div class="gallery__box-description">
                     <p> Camiseta oversize manga corta gris </p>
                 </div>
-                <div class="galerry__box-price">
+                <div class="gallery__box-price">
                     <p>  7,99 € </p>
                 </div>
             </div>
             <div class="gallery__box">
-                <div class="galerry__box-image">
+                <div class="gallery__box-image">
                     <img src="images/camiseta3.PNG" />
                 </div>
-                <div class="galerry__box-description">
+                <div class="gallery__box-description">
                     <p> Camiseta oversize manga corta crema </p>
                 </div>
-                <div class="galerry__box-price">
+                <div class="gallery__box-price">
                     <p>  7,99 € </p>
                 </div>
             </div>
             <div class="gallery__box">
-                <div class="galerry__box-image">
+                <div class="gallery__box-image">
                     <img src="images/camiseta4.PNG" />
                 </div>
-                <div class="galerry__box-description">
+                <div class="gallery__box-description">
                     <p> Camiseta oversize manga corta negra </p>
                 </div>
-                <div class="galerry__box-price">
+                <div class="gallery__box-price">
                     <p>  7,99 € </p>
                 </div>
             </div>
             <div class="gallery__box">
-                <div class="galerry__box-image">
+                <div class="gallery__box-image">
                     <img src="images/camiseta5.PNG" />
                 </div>
-                <div class="galerry__box-description">
+                <div class="gallery__box-description">
                     <p> Camiseta oversize manga corta blanca </p>
                 </div>
-                <div class="galerry__box-price">
+                <div class="gallery__box-price">
                     <p>  7,99 € </p>
                 </div>
             </div>
             <div class="gallery__box">
-                <div class="galerry__box-image">
+                <div class="gallery__box-image">
                     <img src="images/camiseta6.PNG" />
                 </div>
-                <div class="galerry__box-description">
+                <div class="gallery__box-description">
                     <p> Camiseta oversize manga corta gris noche  </p>
                 </div>
-                <div class="galerry__box-price">
+                <div class="gallery__box-price">
                     <p>  7,99 € </p>
                 </div>
             </div>
             <div class="gallery__box">
-                <div class="galerry__box-image">
+                <div class="gallery__box-image">
                     <img src="images/camiseta7.PNG" />
                 </div>
-                <div class="galerry__box-description">
+                <div class="gallery__box-description">
                     <p> Camiseta oversize manga corta gris claro </p>
                 </div>
-                <div class="galerry__box-price">
+                <div class="gallery__box-price">
                     <p>  7,99 € </p>
                 </div>
             </div>
             <div class="gallery__box">
-                <div class="galerry__box-image">
+                <div class="gallery__box-image">
                     <img src="images/camiseta8.PNG" />
                 </div>
-                <div class="galerry__box-description">
+                <div class="gallery__box-description">
                     <p> Camiseta grafico contraste </p>
                 </div>
-                <div class="galerry__box-price">
+                <div class="gallery__box-price">
                     <p> 12,99 € </p>
                 </div>
             </div>
             <div class="gallery__box">
-                <div class="galerry__box-image">
+                <div class="gallery__box-image">
                     <img src="images/camiseta9.PNG" />
                 </div>
-                <div class="galerry__box-description">
+                <div class="gallery__box-description">
                     <p> Camiseta manga sisa ranglan</p>
                 </div>
-                <div class="galerry__box-price">
+                <div class="gallery__box-price">
                     <p> 12,99 € </p>
                 </div>
             </div>
             <div class="gallery__box">
-                <div class="galerry__box-image">
+                <div class="gallery__box-image">
                     <img src="images/camiseta10.PNG" />
                 </div>
-                <div class="galerry__box-description">
+                <div class="gallery__box-description">
                     <p> Camiseta grafico flor texto</p>
                 </div>
-                <div class="galerry__box-price">
+                <div class="gallery__box-price">
                     <p> 12,99 € </p>
                 </div>
             </div>
-            
+            <div class="gallery__box">
+                <div class="gallery__box-image">
+                    <img src="images/camiseta11.PNG" />
+                </div>
+                <div class="gallery__box-description">
+                    <p> Camiseta The Beatles corazones</p>
+                </div>
+                <div class="gallery__box-price">
+                    <p> 15,99 € </p>
+                </div>
+            </div>
         </div>
         <div class="newsletter">
             <div class="newsletter__message">
@@ -200,7 +211,6 @@
         <div class="time">
             <p> De lunes a viernes de 9:30 a 22:00 </p>
         </div>
-    </header>
     <div class="info">
         <div class="shop-guide">
             <ul>
