--- a/index.html
+++ b/index.html
@@ -180,6 +180,17 @@
                     <p> 15,99 € </p>
                 </div>
             </div>
+            <div class="gallery__box">
+                <div class="gallery__box-image">
+                    <img src="images/camiseta12.PNG" />
+                </div>
+                <div class="gallery__box-description">
+                    <p> Camiseta tul costuras </p>
+                </div>
+                <div class="gallery__box-price">
+                    <p> 9,99 € </p>
+                </div>
+            </div>
         </div>
         <div class="newsletter">
             <div class="newsletter__message">
