newsletter css done

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="header-styles.css">
     <link rel="stylesheet" href="gallery-styles.css">
+    <link rel="stylesheet" href="news-style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
  
 
@@ -194,33 +198,35 @@
         </div>
         <div class="newsletter">
             <div class="newsletter__message">
-                <h4> 10% DE DESCUENTO...</h4>
-                <h4> SUSCRIBETE A LA NEWSLETTER!</h4>
+                <p class="newsletter__message-discount">10% DE DESCUENTO...</p>
+                <p> SUSCRIBETE A LA NEWSLETTER!</p>
             </div>
             <div class="newsletter__email">
-                <span> Introduce tu email </span>
+                <span> Introduce tu e-mail </span>
                 <input type="email" />
             </div>
         </div>
         <div class="contact">
-            <p> Contacto </p>
-        </div>
-        <div class="contact-elements">
-            <div class="phone">
-                <div class="img-phone">
-                    <img src="images/smartphone.png" />
-                    <p> <a href=""> 900 812 900 </a></p>
+            <div class="contact__text">
+             <p> Contacto </p>
+            </div>
+            <div class="contact-elements">
+                <div class="phone">
+                    <div class="img-phone">
+                        <img src="images/smartphone.png" />
+                        <p> <a href=""> 900 812 900 </a></p>
+                    </div>
+                </div>
+                <div class="online-sales">
+                    <a href=""> Venta online </a>
+                </div>
+                <div class="shops">
+                    <a href=""> Tiendas y empresa </a>
                 </div>
             </div>
-            <div class="online-sells">
-                <a href=""> Venta online </a>
+            <div class="time">
+                <p> De lunes a viernes de 9:30 a 22:00 </p>
             </div>
-            <div class="shops">
-                <a href=""> Tiendas y empresa </a>
-            </div>
-        </div>
-        <div class="time">
-            <p> De lunes a viernes de 9:30 a 22:00 </p>
         </div>
     <div class="info">
         <div class="shop-guide">
