--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="header-styles.css">
     <link rel="stylesheet" href="gallery-styles.css">
     <link rel="stylesheet" href="news-style.css">
+    <link rel="stylesheet" href="info-styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -231,7 +232,7 @@
     <div class="info">
         <div class="shop-guide">
             <ul>
-                <li><a href=""> Preguntas frecuentes </a></li>
+                <li class="info__li-title">Preguntas frecuentes</li>
                 <li><a href=""> Pago </a></li>
                 <li><a href=""> Envio </a></li>
                 <li><a href=""> Devoluciones </a></li>
@@ -239,12 +240,13 @@
                 <li><a href=""> Ticket Regalo </a></li>
                 <li><a href=""> Compra a traves de iPod en Tienda </a></li>
                 <li><a href=""></a> Disponibilidad de articulos</li>
-                <li><a href=""></a></li>
+                <li><a href=""> Modificacion de datos y pedidos</a></li>
                
             </ul>
         </div>
         <div class="services">
             <ul>
+                <li class="info__li-title">Servicios</li>
                 <li><a href="">Tarjeta Regalo</a></li>
                 <li><a href="">Arreglos</a></li>
                 <li><a href="">Cuidado de prendas</a></li>
@@ -253,6 +255,7 @@
         </div>
         <div class="companies">
             <ul>
+                <li class="info__li-title">Empresas</li>
                 <li><a href="">Quienes somos</a></li>
                 <li><a href="">Oficinas</a></li>
                 <li><a href="">Tiendas</a></li>
@@ -263,6 +266,7 @@
         </div>
         <div class="policy">
             <ul>
+                <li class="info__li-title">Politicas</li>
                 <li><a href="">Politica medioambiental</a></li>
                 <li><a href="">Trato a los animales</a></li>
                 <li><a href="">Politica de privacidad</a></li>
@@ -271,6 +275,7 @@
             </ul>
         </div>
         <div class="socials">
+            <p class="info__li-title"> Social </p>
             <div class="socials__fb">
                 <img src="images/facebook-app-symbol.png" >
                 <a href=""><p> Facebook </p></a>
@@ -297,6 +302,7 @@
             </div>
         </div>
         <div class="payment">
+            <p class="info__li-title"> Metodos de pago</p>
             <div class="payment__visa">
                 <img src="images/visa.png" >
                 <a href=""><p> Visa </p></a>
@@ -324,10 +330,12 @@
         España|es
       </div>
       <div class="ios">
-        <a href=""><img src="images/ios.png"><p>iOS App</p></a>
+        <img src="images/ios.png">
+        <p>iOS App</p>
       </div>
       <div class="android">
-       <a href=""><img src="images/android.png"><p> Android App</p></a>
+       <img src="images/android.png">
+       <p> Android App</p>
       </div>
       <div class="more">
         <a href=""><p> Mas moda </p></a>
