--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- styles -->
     <link rel="stylesheet" href="header-styles.css">
     <link rel="stylesheet" href="gallery-styles.css">
     <link rel="stylesheet" href="news-style.css">
     <link rel="stylesheet" href="info-styles.css">
+    <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,6 +28,16 @@
             <div class="header__option-f-m">
                 <div class="header__opition-f-m__fem">
                     <p> MUJER </p>
+                    <ul class="header__opition-f-m__fem-ul">
+                        <li class="header__opition-f-m__fem-ul_li"> <a href=""> Novedades </a></li>
+                        <li class="header__opition-f-m__fem-ul_li"> <a href=""> Ropa </a></li>
+                        <li class="header__opition-f-m__fem-ul_li"> <a href=""> P&B by Rosalia </a></li>
+                        <li class="header__opition-f-m__fem-ul_li"> <a href=""> Zapatos </a></li>
+                        <li class="header__opition-f-m__fem-ul_li"> <a href=""> Accesorios </a></li>
+                        <li class="header__opition-f-m__fem-ul_li"> <a href=""> Editorials </a></li>
+                        <li class="header__opition-f-m__fem-ul_li"> <a href=""> Join Life </a></li>
+                        <li class="header__opition-f-m__fem__li"> <a href=""> Promociones </a></li>
+                    </ul>
                 </div>
                 <div class="header__opition-f-m__masc">
                     <p> HOMBRE </p>
@@ -52,8 +64,7 @@
     <!-- SUB-TEXT -->
     <div class="sub-text">
         <div class="below-title">
-            <p> <a href=""> Mujer </a> > <a href=""> Ropa </a> > <a href=""> Camisetas </a> > <b>Licencias (51
-                        articulos)</b> </p>
+            <p> <a href=""> Mujer </a> > <a href=""> Ropa </a> > <a href=""> Camisetas </a> > <b>Licencias (51 articulos)</b> </p>
         </div>
         <div class="other">
             <div class="view">
@@ -203,6 +214,8 @@
             </div>
         </div>
     </div>
+
+    <!-- NEWSLETTER -->
     <div class="newsletter">
         <div class="newsletter__message">
             <p class="newsletter__message-discount">10% DE DESCUENTO...</p>
@@ -235,6 +248,8 @@
             <p> De lunes a viernes de 9:30 a 22:00 </p>
         </div>
     </div>
+
+    <!-- INFO -->
     <div class="info">
         <div class="shop-guide">
             <ul>
